<resources>
    <string name="app_name">Desh Hospital</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text_one">Desh Hospital</string>
    <string name="profile">Profile</string>
    <string name="appointment">Appointment</string>
    <string name="home">Home</string>
    <string name="desh_hospital">Desh Hospital</string>
    <string name="login_page_subtitle">This is a Placeholder text</string>
    <string name="login_error_msg">Oh no! Your account or password is incorrect, please check again.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="you_don_t_have_an_account">You don\'t have an account</string>
    <string name="signup">Signup</string>
    <string name="error_email">Invalid email</string>
    <string name="create_new_account">Create New Account</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_location">Your location</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="btn_continue">Continue</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="error_name">Name can not be empty</string>
    <string name="error_number">Must be more then 11 letter</string>
    <string name="error_address">Must write your address</string>
    <string name="error_dob">Write your birth date</string>
    <string name="recover">Please enter your Email so we can help you recover your password</string>
    <string name="next">Next</string>
    <string name="member_name">Member Name</string>
    <string name="nric_passport_no">NRIC / Passport No</string>
    <string name="health_screening">My Health Screening Results</string>
    <string name="in_patient_bill">Inpatient Bill Status</string>
    <string name="in_patient_discharge">Inpatient Discharge Status</string>
    <string name="in_patient">Inpatient Discharge</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="doctor_appointment">Doctor \n Appointment</string>
    <string name="sos_emergency">SOS \n Emergency</string>
    <string name="me">Me</string>
    <string name="patient">Patient</string>
    <string name="prescription">Prescription</string>
    <string name="report">Report</string>
    <string name="bill_status">Bill Status</string>
    <string name="bill_settlement">Bill Settlement</string>
    <string name="discharge">Discharge</string>
    <string name="meals">Meals</string>
    <string name="emergency">Emergency</string>
    <string name="service">Service</string>
    <string name="hospital_nfacility">Hospital\nFacility</string>
    <string name="blood_bank">Blood Bank</string>
    <string name="ambulance">Ambulance</string>
    <string name="emergency_nbooking">Emergency\nBooking</string>
    <string name="pharmaceutical">Pharmaceutical</string>
    <string name="parking">Parking</string>
    <string name="nurse">Nurse</string>
    <string name="human_resource">Human Resource</string>
    <string name="other_staff">Other Staff</string>
    <string name="staff">Staff</string>
    <string name="post">Post</string>
    <string name="qualification">Qualification</string>
    <string name="address">Address</string>
    <string name="create_an_account">Create An Account</string>
    <string name="continue_btn">Continue</string>
    <string name="licence_number">Licence Number</string>
    <string name="nid_card_number">Nid card Number</string>
    <string name="view_all_doctors">VIEW ALL DOCTORS</string>
    <string name="specialties">Specialties</string>
    <string name="specialties_field">Specialties field</string>
    <string name="patient_s_nric_passport_no">Patient\'s NRIC / Passport No</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="make_appointment_now">Make Appointment Now</string>
    <string name="error_identity">Please input NRIC / Passport</string>
    <string name="error_date">Please input date</string>
    <string name="error_time">Please input time</string>
    <string name="error_field_name">Invalid field name</string>
    <string name="create_doctor_account">Create Doctor Account</string>
    <string name="all_specialties_doctor">All Specialties Doctor</string>
    <string name="doctor_s_information">Doctor\'s Information</string>
    <string name="field_name">Field Name</string>
    <string name="make_appointment">Make Appointment</string>
    <string name="all_doctors">All Doctors</string>
    <string name="patient_nric_passport_no">Patient NRIC / Passport No</string>
    <string name="search">Search</string>
    <string name="prescription_error_msg">Your NRIC / Passport is incorrect, please check again.</string>
    <string name="invalid_identity">Invalid patient identity </string>
    <string name="date">Date</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="pdf_file">PDF file</string>
    <string name="new_prescription">New Prescription</string>
    <string name="age">Age :</string>
    <string name="years">Years</string>
    <string name="name">Name :</string>
    <string name="write_a_prescription">Write a prescription</string>
    <string name="submit">Submit</string>
    <string name="prescription_details">Prescription Details</string>
    <string name="pathology_tests">Pathology Tests</string>
    <string name="diagnostic_center">Diagnostic Center</string>
    <string name="no_image">No Image Selected</string>
    <string name="inpatient_discharge_status">Inpatient Discharge Status</string>
    <string name="discharge_summary">Discharge Summary</string>
    <string name="department">Department</string>
    <string name="general_information">GENERAL INFORMATION</string>
    <string name="patient_identity">Patient Identity</string>
    <string name="ages">Age</string>
    <string name="sex">Sex</string>
    <string name="ward_bed_no">Ward/Bed no</string>
    <string name="consultant">Consultant</string>
    <string name="admission_date">Admission Date</string>
    <string name="surgery_date">Surgery Date</string>
    <string name="discharge_date">Discharge Date</string>
    <string name="surgery_info">Surgery Info</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="names">Name</string>
    <string name="history_of_present_illness">History of Present Illness</string>
    <string name="complaints">Complaints</string>
    <string name="other_complaints">Other complaints</string>
    <string name="create_discharge">Create Discharge</string>
    <string name="admission">Admission</string>
    <string name="new_patient">New Patient</string>
    <string name="add_patient">Add Patient</string>
    <string name="patient_details">Patient Details</string>
    <string name="problem">Problem</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="nric_passport">NRIC/Passport</string>
    <string name="relation">Relation</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="chat_with_our_specialist">Chat with our Specialist</string>
    <string name="press_here_to_call">Press here to call</string>
    <string name="_24_7_hrs_service">24/7 Hrs service</string>
    <string name="_24_hrs_emergency_service">24 Hrs Emergency Service</string>
    <string name="blood_donor">Blood Donor</string>
    <string name="area">Area</string>
    <string name="registration">Registration as a Donor</string>
    <string name="blood_group">Blood Group</string>
    <string name="donation_status">Donation Status</string>
    <string name="donor_information">Donor Information</string>
    <string name="update_donor_info">Update Donor Info</string>
    <string name="ambulance_list">Ambulance List</string>
    <string name="ambulance_licence">Ambulance Licence</string>
    <string name="ambulance_name">Ambulance Name</string>
    <string name="driver_name">Driver Name</string>
    <string name="driving_licence">Driving Licence</string>
    <string name="driver_age">Driver Age</string>
    <string name="ambulance_information">Ambulance Information</string>
    <string name="add_new_ambulance">Add New Ambulance</string>
    <string name="update_ambulance_info">Update Ambulance Info</string>
    <string name="new_pharmaceutical">New Pharmaceutical</string>
    <string name="licence_no">Licence no</string>
    <string name="starting_date">Starting Date</string>
    <string name="location">Location</string>
    <string name="error_join">Join date can not be empty</string>
    <string name="error_licence">Must be enter licence no</string>
    <string name="pharmaceutical_list">Pharmaceutical List</string>
    <string name="company_name">Company name</string>
    <string name="licence">Licence</string>
    <string name="medicine_store">Medicine Store</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="medicine_list">Medicine List</string>
    <string name="expire_medicine">Expire Medicine</string>
    <string name="employee">Employee</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="company">Company</string>
    <string name="expire_date">Expire Date</string>
    <string name="price">Price</string>
    <string name="self_no">Self No</string>
    <string name="row_no">Row No</string>
    <string name="column_no">Column No</string>
    <string name="details">Details</string>
    <string name="medicine_information">Medicine Information</string>
    <string name="expired_medicine">Expired Medicine</string>
    <string name="new_medicine">New Medicine</string>
    <string name="title_employee_account">Create Employee Account</string>
    <string name="error_post">Post can not be empty</string>
</resources>