<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/doctorItemCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/margin_2"
    android:layout_marginEnd="@dimen/margin_5"
    android:background="@color/background"
    app:cardElevation="@dimen/radius_8">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/doctorItemImage"
            android:layout_width="@dimen/layout_110"
            android:layout_height="@dimen/layout_160"
            android:layout_marginStart="@dimen/margin_10"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_human"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/doctorItemImage"
            android:layout_marginLeft="@dimen/margin_16"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/doctorItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15"
                android:text="@string/full_name"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/doctorItemPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15"
                android:text="@string/post"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_17"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/doctorItemName" />
            <TextView
                android:id="@+id/doctorItemQualification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/qualification"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/doctorItemPost" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>