<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.myapp.deshhospital.presentation.login.LoginCreateFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/backIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_15"
                android:layout_marginTop="@dimen/margin_22"
                android:background="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_marginTop="@dimen/margin_22"
                android:layout_marginRight="@dimen/margin_30"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backIv">

                <TextView
                    android:id="@+id/titleTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_new_account"
                    android:textColor="@color/page_title_text_color"
                    android:textSize="@dimen/text_size_26"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:background="@drawable/rounded_edittext_bg"
                    android:textColorHint="@color/hint_text_color"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/titleTv"
                    app:passwordToggleTint="@color/hint_text_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fullNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/full_name"
                        android:inputType="text"
                        android:paddingLeft="@dimen/padding_14"
                        android:textColor="@color/page_title_text_color"
                        android:textSize="@dimen/text_size_15" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:background="@drawable/rounded_edittext_bg"
                    android:textColorHint="@color/hint_text_color"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name"
                    app:passwordToggleTint="@color/hint_text_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/email"
                        android:inputType="text"
                        android:paddingLeft="@dimen/padding_14"
                        android:textColor="@color/page_title_text_color"
                        android:textSize="@dimen/text_size_15" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:background="@drawable/rounded_edittext_bg"
                    android:textColorHint="@color/hint_text_color"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email"
                    app:passwordToggleTint="@color/hint_text_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneNumberEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:paddingLeft="@dimen/padding_14"
                        android:textColor="@color/page_title_text_color"
                        android:textSize="@dimen/text_size_15" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:background="@drawable/rounded_edittext_bg"
                    android:textColorHint="@color/hint_text_color"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
                    app:passwordToggleTint="@color/hint_text_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/locationEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/your_location"
                        android:inputType="text"
                        android:paddingLeft="@dimen/padding_14"
                        android:textColor="@color/page_title_text_color"
                        android:textSize="@dimen/text_size_15" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dob"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:background="@drawable/rounded_edittext_bg"
                    android:textColorHint="@color/hint_text_color"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/location"
                    app:passwordToggleTint="@color/hint_text_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dobEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/date_of_birth"
                        android:inputType="text"
                        android:paddingLeft="@dimen/padding_14"
                        android:textColor="@color/page_title_text_color"
                        android:textSize="@dimen/text_size_15" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordB"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:background="@drawable/rounded_edittext_bg"
                    android:textColorHint="@color/hint_text_color"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dob"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/hint_text_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingLeft="@dimen/padding_14"
                        android:textColor="@color/page_title_text_color"
                        android:textSize="@dimen/text_size_15" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirmPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:background="@drawable/rounded_edittext_bg"
                    android:textColorHint="@color/hint_text_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordB"
                    app:layout_constraintVertical_bias="0.0"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/hint_text_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirmPassEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:paddingLeft="@dimen/padding_14"
                        android:textColor="@color/page_title_text_color"
                        android:textSize="@dimen/text_size_15" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/continueButton"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_35"
                    android:layout_marginBottom="@dimen/margin_20"
                    android:backgroundTint="@color/colorPrimary"
                    android:padding="@dimen/padding_14"
                    android:text="@string/btn_continue"
                    android:textSize="@dimen/text_size_15"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/signInCon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_30"
                    android:paddingBottom="@dimen/padding_30"
                    app:layout_constraintTop_toBottomOf="@+id/continueButton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/signInTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_account"
                        android:layout_marginLeft="@dimen/margin_20"
                        android:textColor="@color/page_title_text_color"
                        app:layout_constraintStart_toEndOf="@id/signInbtn"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/signInbtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in"
                        android:onClick="@{model.actionSignIn}"
                        android:layout_marginLeft="@dimen/margin_3"
                        android:textColor="@color/red_500"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/signInTv"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>