<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.myapp.deshhospital.presentation.dashboard.discharge.DischargeHomeFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_700"
            android:paddingBottom="@dimen/padding_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_11"
                android:layout_marginTop="@dimen/margin_12"
                android:background="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dischargeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_35"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_marginBottom="1dp"
                android:text="@string/inpatient_discharge_status"
                android:textAlignment="center"
                android:textColor="@color/background"
                android:textSize="@dimen/text_size_30"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/backIv"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_20"
            app:layout_constraintTop_toBottomOf="@+id/containerOne">

            <TextView
                android:id="@+id/dischargeErrorTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_30"
                android:text="@string/prescription_error_msg"
                android:textAlignment="viewStart"
                android:textColor="@color/red_500"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintBottom_toTopOf="@+id/identity"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/identity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:background="@drawable/rounded_edittext_bg"
                android:textColorHint="@color/hint_text_color"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dischargeErrorTv"
                app:passwordToggleTint="@color/hint_text_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/identityCardEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/patient_nric_passport_no"
                    android:inputType="text"
                    android:paddingLeft="@dimen/padding_14"
                    android:textColor="@color/page_title_text_color"
                    android:textSize="@dimen/text_size_17" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnDischargeSearch"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_50"
                android:layout_marginTop="@dimen/margin_30"
                android:layout_marginRight="@dimen/margin_50"
                android:backgroundTint="@color/colorPrimary"
                android:enabled="false"
                android:padding="@dimen/padding_14"
                android:text="@string/search"
                android:textSize="@dimen/text_size_15"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/identity" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>